--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,9 @@ comment: true
     {% else %}
         {% if site.duoshuo.config %}
         <div class="comment-cnt">
-            <div data-thread-key="{{page.url}}" data-title= "{{ page.title }}" data-url= "{{ page.url }}" class="ds-thread"></div>
+            <div data-thread-key="{{ page.url }}" data-title= "{{ page.title }}" data-url= "{{ page.url }}" class="ds-thread">
+                fuck
+            </div>
         </div>
         {% endif %}
     {% endif %}
