--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,9 +32,7 @@ comment: true
     {% else %}
         {% if site.duoshuo.config %}
         <div class="comment-cnt">
-            <div data-thread-key="{{ page.url }}" data-title= "{{ page.title }}" data-url= "{{ page.url }}" class="ds-thread">
-                fuck
-            </div>
+            <div class="ds-thread"></div>
         </div>
         {% endif %}
     {% endif %}
