--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Spirax' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" href="{{ site.url }}{{ site.themes }}/images/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="http://www.iteblog.com/wp-content/monokai_sublime.min.css"/>
+    <script src="http://www.iteblog.com/wp-content/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
     <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body id="violet">
