--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Spirax' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" href="{{ site.url }}{{ site.themes }}/images/favicon.ico" type="image/x-icon" />
-    <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">  
+    <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/solarized_dark.min.css" rel="stylesheet">  
     <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script> 
     <script>hljs.initHighlightingOnLoad();</script>
     <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
