--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,15 @@
     <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/solarized_dark.min.css" rel="stylesheet">  
     <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script> 
     <script>hljs.initHighlightingOnLoad();</script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?67c88d7227099542a0d6ff5d6d374965";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
     <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body id="violet">
