--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,28 +19,28 @@
     <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/pygments.css" type="text/css" />
     <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Spirax' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Spirax' rel='stylesheet' type='text/css'> -->
     <link rel="shortcut icon" href="{{ site.url }}{{ site.themes }}/images/favicon.ico" type="image/x-icon" />
-    <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/solarized_dark.min.css" rel="stylesheet">  
-    <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script> 
+    <link href="https://cdn.bootcss.com/highlight.js/8.0/styles/solarized_dark.min.css" rel="stylesheet">  
+    <script src="https://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script> 
     <script>hljs.initHighlightingOnLoad();</script>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?67c88d7227099542a0d6ff5d6d374965";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
+<!-- <script> -->
+<!-- var _hmt = _hmt || []; -->
+<!-- (function() { -->
+<!--   var hm = document.createElement("script"); -->
+<!--   hm.src = "//hm.baidu.com/hm.js?67c88d7227099542a0d6ff5d6d374965"; -->
+<!--   var s = document.getElementsByTagName("script")[0]; --> 
+<!--   s.parentNode.insertBefore(hm, s); -->
+<!-- })(); -->
 
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<!--   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ -->
+<!--   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), -->
+<!--   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) -->
+<!--   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); -->
 
-  ga('create', 'UA-91881709-1', 'auto');
-  ga('send', 'pageview');
-</script>
+<!--   ga('create', 'UA-91881709-1', 'auto'); -->
+<!--   ga('send', 'pageview'); -->
+<!-- </script> -->
     <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body id="violet">
@@ -79,13 +79,13 @@ var _hmt = _hmt || [];
                     {% for link in site.follow %}
                     <a class="follow" href="{{ link.url }}" target="_blank"><i class="fa {{ link.class }}"></i></a>
                     {% endfor %}
-                    <p class="text">Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> & <a href="http://pages.github.com/">Github</a> | Copyright 2012 - 2014 by <a href="http://www.besteric.com">besteric</a> | Design by <a href="http://www.zhanxin.info">zhanxin.lin</a></p>
+                    <p class="text">Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> & <a href="https://pages.github.com/">Github</a> | Copyright 2012 - 2014 by <a href="https://www.besteric.com">besteric</a> | Design by <a href="https://www.zhanxin.info">zhanxin.lin</a></p>
                 </div>
             </div>
         </footer>
     </div>
 
-    <script type="text/javascript" src="http://a.tbcdn.cn/app/tms/others/global/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="https://a.tbcdn.cn/app/tms/others/global/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="http://a.tbcdn.cn/app/tms/others/global/jquery-scrollTo.js"></script>
     <script type="text/javascript" src="{{ site.url }}{{ site.themes }}/js/common.js"></script>
     <script type="text/javascript">
@@ -94,7 +94,7 @@ var _hmt = _hmt || [];
             headImgArr.push("{{ imgsrc.item }}");
         {% endfor %}
         if(headImgArr.length <= 0) {
-            headImgArr = ["http://gtms02.alicdn.com/tps/i2/T1iyTkFttcXXcryKEg-1280-200.jpg"];
+            headImgArr = ["https://gtms02.alicdn.com/tps/i2/T1iyTkFttcXXcryKEg-1280-200.jpg"];
             var item = 0;
         } else {
             var item = Math.floor(Math.random() * (headImgArr.length));
@@ -103,16 +103,16 @@ var _hmt = _hmt || [];
             "background-image": "url(" + headImgArr[item] + ")"
         });
     </script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <!-- <script> -->
+    <!--   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ -->
+    <!--   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), -->
+    <!--   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) -->
+    <!--   })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); -->
 
-      ga('create', 'UA-12443851-2', 'besteric.com');
-      ga('send', 'pageview');
+    <!--   ga('create', 'UA-12443851-2', 'besteric.com'); -->
+    <!--   ga('send', 'pageview'); -->
 
-    </script>
+    <!-- </script> -->
     {% if page.comment %}
         {% if site.disqus.config %}
         <script type="text/javascript">
@@ -141,7 +141,7 @@ var _hmt = _hmt || [];
             {% endif %}
         {% endif %}
     {% endif %}
-    <script id="dsq-count-scr" src="//yonghaohu.disqus.com/count.js" async></script>
+    <!-- <script id="dsq-count-scr" src="//yonghaohu.disqus.com/count.js" async></script> -->
 <div id="disqus_thread"></div>
 <script>
 
