--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,9 +85,9 @@
         </footer>
     </div>
 
-    <script type="text/javascript" src="https://a.tbcdn.cn/app/tms/others/global/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="http://a.tbcdn.cn/app/tms/others/global/jquery-scrollTo.js"></script>
-    <script type="text/javascript" src="{{ site.url }}{{ site.themes }}/js/common.js"></script>
+    <!-- <script type="text/javascript" src="https://a.tbcdn.cn/app/tms/others/global/jquery-1.8.3.min.js"></script> -->
+    <!-- <script type="text/javascript" src="http://a.tbcdn.cn/app/tms/others/global/jquery-scrollTo.js"></script> -->
+    <!-- <script type="text/javascript" src="{{ site.url }}{{ site.themes }}/js/common.js"></script> -->
     <script type="text/javascript">
         var headImgArr = [];
         {% for imgsrc in site.headimg %}
