--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
         {% endif %}         
     </title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+    <meta http-equiv="Cache-Control" content="max-age=1209600">
     <meta name="generator" content="Jekyll" />
     <meta name="author" content="{{ site.author.name }}" />
     <meta name="description" content="{{ page.description }}" />
