--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
     <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
     <!-- //页面样式 -->
     <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/pygments.css" type="text/css" />
-    <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
-    <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/solarized-dark.min.css" rel="stylesheet">  
+    <!-- <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/pygments.css" type="text/css" /> -->
+    <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}"  media="print"/>
+    <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/solarized-dark.min.css" rel="stylesheet" media="print">  
     <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js" async></script>
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
