--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
             <div class="copyright">
                 <div class="copyright-cnt fn-clear">
                     {% for link in site.follow %}
-                    <a class="follow" href="{{ link.url }}" target="_blank"><i class="fa {{ link.class }}"></i></a>
+                    <a class="follow" href="{{ link.url }}" target="_blank" rel="noopener"><i class="fa {{ link.class }}"></i></a>
                     {% endfor %}
                     <p class="text">Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> & <a href="https://pages.github.com/">Github</a> | Copyright 2012 - 2014 by <a href="https://www.besteric.com">besteric</a> | Design by <a href="https://www.zhanxin.info">zhanxin.lin</a></p>
                 </div>
