--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <meta name="description" content="{{ page.description }}" />
     <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
     <!-- //页面样式 -->
-    <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/style.css" type="text/css" media="print"/>
+    <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/style.css" type="text/css"/>
     <!-- <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/pygments.css" type="text/css" /> -->
     <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}"  media="print"/>
     <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/solarized-dark.min.css" rel="stylesheet" media="print">  
