--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,13 +15,12 @@
     <meta name="author" content="{{ site.author.name }}" />
     <meta name="description" content="{{ page.description }}" />
     <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
+    <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/solarized-dark.min.css" rel="stylesheet" media="print">  
     <!-- //页面样式 -->
     <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/style.css" type="text/css"/>
     <!-- <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/pygments.css" type="text/css" /> -->
     <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}"  media="print"/>
-    <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/solarized-dark.min.css" rel="stylesheet" media="print">  
     <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js" async></script>
-    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body id="violet">
     <div class="page-wrapper">
@@ -79,5 +78,6 @@
             "background-image": "url(" + headImgArr[item] + ")"
         });
     </script>
+    <script>hljs.initHighlightingOnLoad(); async</script>
 </body>
 </html>
