--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/style.css" type="text/css"/>
     <!-- <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/pygments.css" type="text/css" /> -->
     <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}"  media="print"/>
-    <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js" async></script>
+    <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js" async>
+        hljs.initHighlightingOnLoad() </script>
 </head>
 <body id="violet">
     <div class="page-wrapper">
@@ -78,6 +79,5 @@
             "background-image": "url(" + headImgArr[item] + ")"
         });
     </script>
-    <script>hljs.initHighlightingOnLoad(); async</script>
 </body>
 </html>
