--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,13 +15,13 @@
     <meta name="author" content="{{ site.author.name }}" />
     <meta name="description" content="{{ page.description }}" />
     <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
-    <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/solarized-dark.min.css" rel="stylesheet" media="print">  
     <!-- //页面样式 -->
     <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/style.css" type="text/css"/>
     <!-- <link rel="stylesheet" href="{{ site.url }}{{ site.themes }}/css/pygments.css" type="text/css" /> -->
     <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}"  media="print"/>
-    <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js" async>
-        hljs.initHighlightingOnLoad() </script>
+    <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/solarized-dark.min.css" rel="stylesheet">  
+    <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body id="violet">
     <div class="page-wrapper">
